--- a/src/app/item-list/item-list.page.html
+++ b/src/app/item-list/item-list.page.html
@@ -24,7 +24,7 @@
 
     <ion-grid>
         <ion-row *ngFor="let items of myShoppingList; let i = index" [attr.data-index]="i">
-            <ion-col class="ion-align-self-center">
+            <ion-col class="ion-align-self-center" color="primary">
                 {{items.name}}
             </ion-col>
             <ion-col class="ion-align-self-center">
